menu,dish,login

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,23 +1,32 @@
-<nav class="navbar navbar-expand-lg bgBeige ">
-  <div class="collapse navbar-collapse container-fluid" id="navbarText" >
-      <span class="navbar-text">
-          <a class="me-3 ms-3" href="#"><img src="assets/Images/Logo.png"  height="90vh" alt="Logo" class=""></a>
-      </span>
-      <ul class="navbar-nav me-auto  mb-2 mb-lg-0 home" >
+<nav class="navbar navbar-expand-lg bgBeige">
+    <div class="collapse navbar-collapse container-fluid" id="navbarText">
+        <a class="me-3 ms-3" href="#">
+            <img src="assets/Images/logo.png" style="height: 200px;" alt="Logo" class="">
+          </a>
           
-          <li class="nav-item">
-              <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red " routerLink="/" >Home</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 home">
+        <li class="nav-item">
+          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/">Home</a>
+        </li>
+        <li class="nav-item active">
+          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-5 red" routerLink="/login">Log in</a>
+        </li>
+        <li class="nav-item">
+          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/about">About</a>
+        </li>
+        <li class="nav-item">
+            <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/gmenu">Gestion des menu</a>
           </li>
           <li class="nav-item">
-              <a  id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red"  routerLink="/about" >About</a>
+            <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/plat">Gestion des plats</a>
           </li>
-          <li class="nav-item active">
-              <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/menu" >Menu</a>
-          </li>
+        <li class="nav-item active">
+          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/menu">Menu</a>
+        </li>
       </ul>
       <span class="navbar-text">
-          <button class=" offset-11 fs-5 btn btn-light btn-outline-dark" routerLink="/cart"><img src="assets/Images/Cart.png" width="60%"  alt="Cart" class="pb-1"></button>
+        <button class="offset-11 fs-5 btn btn-light btn-outline-dark" routerLink="/cart"><img src="assets/Images/Cart.png" width="60%" alt="Cart" class="pb-1"></button>
       </span>
-      
-  </div>
-</nav>
+    </div>
+  </nav>
+  
