--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -16,3 +16,13 @@
 .home {
     margin-left: 2%;
 }
+.navbar-nav .nav-item {
+    width: 100px;
+    margin-right: 50px; /* Espacement horizontal entre les éléments li */
+  }
+  
+  .navbar-nav {
+    display: flex;
+    align-items: center; /* Alignement vertical des éléments li */
+  }
+  
