--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
-<navbar></navbar>
 
-<router-outlet></router-outlet>
+<div style=" background-color: #0B1315;">
 
-<app-footer></app-footer>
+    <navbar></navbar>
+    <div >
+    <router-outlet></router-outlet>
+    
+    </div>
+    
+    <app-footer></app-footer>
+
+</div>
