--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -11,7 +11,9 @@ h4 {
 
 .row {
     .card{
-        margin: 10%;
+        margin: 5%;
+        width: 70%;
+        height:90% ;
         box-shadow: 2px 2px 6px black;
     }
 
