--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,32 +1,46 @@
 <nav class="navbar navbar-expand-lg bgBeige">
-    <div class="collapse navbar-collapse container-fluid" id="navbarText">
-        <a class="me-3 ms-3" href="#">
-            <img src="assets/Images/logo.png" style="height: 200px;" alt="Logo" class="">
-          </a>
-          
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 home">
-        <li class="nav-item">
-          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-5 red" routerLink="/login">Log in</a>
-        </li>
-        <li class="nav-item">
-          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/about">About</a>
-        </li>
-        <li class="nav-item">
-            <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/gmenu">Gestion des menu</a>
-          </li>
-          <li class="nav-item">
-            <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/plat">Gestion des plats</a>
-          </li>
-        <li class="nav-item active">
-          <a id="myNavLinks" class="nav-link fs-5 mt-1 ms-3 red" routerLink="/menu">Menu</a>
-        </li>
-      </ul>
-      <span class="navbar-text">
-        <button class="offset-11 fs-5 btn btn-light btn-outline-dark" routerLink="/cart"><img src="assets/Images/Cart.png" width="60%" alt="Cart" class="pb-1"></button>
-      </span>
-    </div>
-  </nav>
-  
+  <div class="container-fluid">
+      <a class="navbar-brand ms-3" href="#">
+          <img src="assets/Images/logo.png" style="height: 100px;" alt="Logo" class="d-inline-block align-text-top">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class=" navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ">
+              <li class="nav-item">
+                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/menu">Menu</a>
+              </li>
+              <li class="nav-item"  *ngIf="isAuthenticated">
+                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/tables">Table Management</a>
+              </li>
+              <li class="nav-item"  *ngIf="isAuthenticated">
+                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/plat">Dish Management</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/login">Log in</a>
+              </li>
+              <li class="nav-item"  *ngIf="isAuthenticated">
+                  <a class="nav-link fs-5 mt-1 ms-3 red" href="#" (click)="logout()">Log out</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/about">About</a>
+              </li>
+          </ul>
+      <!-- dropdown.component.html -->
+
+            <!-- <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ selectedOption || 'Sélectionner une option' }}
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" *ngFor="let option of options" (click)="onSelect(option)">{{ option }}</a>
+              </div>
+            </div> -->
+
+      </div>
+  </div>
+</nav>
