--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -6,7 +6,7 @@
 }
 
 .red{
-    color: rgb(51, 6, 6);
+    color: black;
     font-size:160%;
 }
 
@@ -16,13 +16,5 @@
 .home {
     margin-left: 2%;
 }
-.navbar-nav .nav-item {
-    width: 100px;
-    margin-right: 50px; /* Espacement horizontal entre les éléments li */
-  }
-  
-  .navbar-nav {
-    display: flex;
-    align-items: center; /* Alignement vertical des éléments li */
-  }
+
   
