--- a/src/app/dish/dish.component.html
+++ b/src/app/dish/dish.component.html
@@ -1,22 +1,41 @@
 <!-- data-table.component.html -->
 <div style="width: 70%; margin: 0 auto; margin-top: 5%; margin-bottom: 10%;">
-    <button> New Dish</button>
+  <div style="display: flex;">
+    <button (click)="createDish()" style="font-weight: bold;">
+        
+        Add Dish
+        <mat-icon >add</mat-icon>
+
+    </button>
+  </div>
+
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: rgb(114, 112, 112);">
         <!-- Define columns -->
         <ng-container matColumnDef="image" style="margin-top: 2%;">
             <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">IMAGE</th>
             <td mat-cell *matCellDef="let element">
-                <img [src]="url" alt="Dish Image" style="width: 50px; height: 50px;">
+              <img [src]="getImageUrl(element?.dishPhoto)" alt="Dish Image" style="width: 50px; height: 50px;">
             </td>
-        </ng-container>
+          </ng-container>
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">NAME</th>
             <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.name }}</td>
+        </ng-container>
+        <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Category</th>
+            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.category?.name}}</td>
         </ng-container>
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">DESCRIPTION</th>
             <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.description }}</td>
         </ng-container>
+        <ng-container matColumnDef="isAvailable">
+            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Available</th>
+            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">
+              <mat-slide-toggle  [checked]="element.isAvailable" (change)="toggleAvailability(element)">
+              </mat-slide-toggle>
+            </td>
+          </ng-container>
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">PRICE</th>
             <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.price }} $</td>
@@ -29,21 +48,21 @@
                 <span mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" style="background-color: rgb(114, 112, 112)">
                     <mat-icon style="color: rgb(251, 202, 142)">more_vert</mat-icon>
                 </span>
-                <mat-menu #menu="matMenu" style="background-color: rgb(114, 112, 112);">
-                    <button mat-menu-item (click)="editElement(element)" >
+                <mat-menu #menu="matMenu" >
+                    <span mat-menu-item (click)="editElement(element)" >
                         <mat-icon>edit</mat-icon>
                         <span>Edit</span>
-                    </button>
-                    <button mat-menu-item (click)="deleteElement(element)">
+                    </span>
+                    <span mat-menu-item (click)="deleteElement(element)">
                         <mat-icon>delete</mat-icon>
                         <span>Delete</span>
-                    </button>
+                    </span>
                   </mat-menu>
             </td>
         </ng-container>
 
         <!-- Define rows -->
-        <tr mat-header-row *matHeaderRowDef="['image', 'name', 'description', 'price', 'actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['image', 'name', 'description', 'price', 'actions']"></tr>
+        <tr mat-header-row *matHeaderRowDef="['image', 'name','category', 'description','isAvailable' ,'price', 'actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['image', 'name','category', 'description','isAvailable' , 'price', 'actions']"></tr>
     </table>
 </div>
