--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,21 +1,29 @@
 <div class="container">
-    <h4>Our Menu</h4>
-    <div class =" row row-cols-xs-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4"> 
-        <div *ngFor="let product of products; index as i">
-            <div class="card" style="width: 16rem;">
-                <img src={{product.image}} class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title">{{product.productName}}</h5>
-                <p class="card-text">{{product.productDescription}}</p>
-                <ng-template [ngIf]="product.availability == true" [ngIfElse]="notAvailable"> 
-                    <a routerLink="/product/{{i}}" class="btn btn-primary">Details</a>
-                    <a (click)="addToCart(product)" class="btn btn-primary">Add to cart</a>
-                </ng-template>
-                <ng-template #notAvailable>
-                    <p><b>Sorry, not available at the moment!</b></p>
-                </ng-template>
-                </div>
-            </div>
+    <h4 style="color: white;">Our Menu</h4>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
+      <div *ngFor="let product of products; index as i" class="col mb-4">
+        <div class="card" style="width: 16rem;">
+          <img [src]="getImageUrl(product.dishPhoto)" class="card-img-top" alt="{{product.name}}">
+          <div class="card-body">
+            <h5 class="card-title">{{product.name}}</h5>
+            <p class="card-text">{{product.description}}</p>
+            <p class="card-text">{{product?.category?.name}}</p>
+            <ng-template [ngIf]="product.isAvailable" [ngIfElse]="notAvailable">
+              <div style="display: flex;">
+                <a routerLink="/product/{{product.id}}" class="btn btn-primary">Details</a>
+                <a (click)="addToCart(product)" class="btn btn-primary">Add to cart</a>
+              </div>
+            </ng-template>
+            <ng-template #notAvailable>
+              <p><b>Sorry, not available at the moment!</b></p>
+            </ng-template>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+    <div style="text-align:center; margin-top: 20px;">
+      <h4 style="color: white;">Scan the QR code to view the menu</h4>
+      <qrcode [qrdata]="qrCodeData" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
+    </div>
+  </div>
+  
