--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <p class="description">Italienischer Genuss für Zuhause</p>
     <p>
         <button routerLink="/menu">Our Menu</button>
-        <button >Book a Table</button>
+        <button  routerLink="/tabless">Book a Table</button>
     </p>
     </div>
 </div>
