--- a/src/app/menu-resturant/menu-resturant.component.html
+++ b/src/app/menu-resturant/menu-resturant.component.html
@@ -1,9 +1,9 @@
 <!-- data-table.component.html -->
 <div style="width: 70%; margin: 0 auto; margin-top: 5%; margin-bottom: 10%;">
     <div style="display: flex;">
-        <button  style="font-weight: bold;">
+        <button  style="font-weight: bold;" (click)="createtable()">
             
-            Add a Menu
+            Add a Table
             <mat-icon >add</mat-icon>
     
         </button>
@@ -11,14 +11,20 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: rgb(114, 112, 112);">
         <!-- Define columns -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">NAME</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.name }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Capacity</th>
+            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.capacity }}</td>
         </ng-container>
         <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">DATE</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.date }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Table number</th>
+            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.tableNumber }}</td>
         </ng-container>
-
+        <ng-container matColumnDef="Available">
+            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Available</th>
+            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">
+              <mat-slide-toggle  [checked]="element.isAvailable" >
+              </mat-slide-toggle>
+            </td>
+          </ng-container>
         <!-- Add column for actions -->
    <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">ACTIONS</th>
@@ -41,7 +47,7 @@
         </ng-container>
 
         <!-- Define rows -->
-        <tr mat-header-row *matHeaderRowDef="['name', 'date', 'actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['name', 'date', 'actions']"></tr>
+        <tr mat-header-row *matHeaderRowDef="['name', 'date','Available', 'actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['name', 'date', 'Available','actions']"></tr>
     </table>
 </div>
