--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,46 +1,47 @@
 <nav class="navbar navbar-expand-lg bgBeige">
-  <div class="container-fluid">
+    <div class="container-fluid">
       <a class="navbar-brand ms-3" href="#">
-          <img src="assets/Images/logo.png" style="height: 100px;" alt="Logo" class="d-inline-block align-text-top">
+        <img src="assets/Images/logo.png" style="height: 100px;" alt="Logo" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class=" navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ">
-              <li class="nav-item">
-                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/menu">Menu</a>
-              </li>
-              <li class="nav-item"  *ngIf="isAuthenticated">
-                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/tables">Table Management</a>
-              </li>
-              <li class="nav-item"  *ngIf="isAuthenticated">
-                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/plat">Dish Management</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/login">Log in</a>
-              </li>
-              <li class="nav-item"  *ngIf="isAuthenticated">
-                  <a class="nav-link fs-5 mt-1 ms-3 red" href="#" (click)="logout()">Log out</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/about">About</a>
-              </li>
-          </ul>
-      <!-- dropdown.component.html -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/menu">Menu</a>
+          </li>
+          <li class="nav-item" *ngIf="isAuthenticated && isAdmin">
+            <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/tables">Table Management</a>
+          </li>
+          <li class="nav-item" *ngIf="isAuthenticated && isAdmin">
+            <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/plat">Dish Management</a>
+          </li>
+          <li class="nav-item" *ngIf="isAuthenticated">
+            <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/Delivery">Delivery Orders</a>
+          </li>
+          <li class="nav-item" *ngIf="!isAuthenticated">
+            <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/about">About</a>
+          </li>
+          <li class="nav-item" *ngIf="!isAuthenticated">
+            <a class="nav-link fs-5 mt-1 ms-3 red" routerLink="/login">Log in</a>
+          </li>
+        </ul>
+          <mat-icon   style=" margin-left: 30%;"  *ngIf="isAuthenticated " matBadgeSize="medium" matBadgePosition="before" routerLink="/cart">shopping_cart</mat-icon>
+          <div [matMenuTriggerFor]="menu" *ngIf="isAuthenticated" style=" margin-left: 10%;">
+            <span style="font-weight: bold;" >{{ username| uppercase }}</span>
+            <mat-icon >arrow_drop_down</mat-icon>
 
-            <!-- <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{ selectedOption || 'Sélectionner une option' }}
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" *ngFor="let option of options" (click)="onSelect(option)">{{ option }}</a>
-              </div>
-            </div> -->
-
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item routerLink="/profile">Profile</button>
+              <button mat-menu-item (click)="logout()">Log out</button>
+            </mat-menu>
+          </div>
+       
+        </div>
       </div>
-  </div>
-</nav>
+  </nav>
+  
