--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -17,4 +17,17 @@
     margin-left: 2%;
 }
 
-  
+.shopping-cart {
+    position: relative;
+    display: inline-block;
+}
+.recommendation-count {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px 10px;
+    font-size: 12px;
+}
