--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,8 +5,8 @@
             <img src="assets/Images/restaurant.jpeg" alt="Restaurant">
             </div>
             <div class="col text ">
-                <h4>Benvenuti</h4>
-                <p>... im Ristorante Il Gambero Rosso. Wir befinden uns im ersten Wiener Gemeindebezirk zwischen Stephansdom und Stadtpark. Unser Küchenchef und sein Team bereiten mit Leidenschaft und Handwerkskunst leckere italienische Spezialitäten zu. Die frische Zubereitung der Speisen ist dabei für uns eine Selbstverständlichkeit, genauso wie eine wechselnde Karte. Hol dir die italenische Küche nach Hause!</p>
+                <h4>Welcome</h4>
+<p>Welcome to kool food, where diverse flavors meet! We serve a delightful blend of traditional and international dishes, all made with fresh, local ingredients. Our chefs are dedicated to crafting delicious meals that celebrate both local and global culinary traditions. Whether you're looking for a cozy dinner, a family gathering, or a special celebration, our warm and inviting atmosphere is perfect for any occasion. Come and enjoy a unique dining experience with us and discover the world of flavors we have to offer.</p>
             </div>
         </div>
     </div>
