--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -8,11 +8,15 @@
         text-align: center;
         justify-items: center;
         gap: 5%;
-        margin: 1% 0%;
+        margin: 0% 1%;
         height: 65vh;
+        margin-top: 20px;
+        margin-bottom: 20px;
 
             img { 
-                width: 40vw; 
+                width: 48vw; 
+                height: 450px;
+                margin-left: -150px;
             }
     
         h4 {
