--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,15 @@
 <div class="home">
-    <div class="name">
-    <p class="heading">Ristorante Il Gambero Rosso</p>
-    <p class="description">Italienischer Genuss für Zuhause</p>
-    <p>
-        <button routerLink="/menu">Our Menu</button>
-        <button  routerLink="/tabless">Book a Table</button>
-    </p>
+  <div class="container">
+    <div class="image-container">
+      <img src="../../assets/Images/Hero.jpeg" alt="Restaurant Image" class="restaurant-image">
     </div>
+    <div class="text-container">
+      <p class="heading">KOUL TOUNSI</p>
+      <p class="description">Best Tunisian Food</p>
+      <p>
+        <button routerLink="/menu">Our Menu</button>
+        <button routerLink="/tabless">Book a Table</button>
+      </p>
+    </div>
+  </div>
 </div>
