--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,19 +30,15 @@
     </form>
   
   </div>
-  <div style="text-align: center;  color: white; font-weight: bold; margin-top: 2%;margin-bottom: 2%;">
-    <span>Forgot your password?</span>
-
-  </div>
-  <div style="text-align: center;  margin-top: 2%;margin-bottom: 2%;color: white; ">
+  <div style="text-align: center;  margin-top: 2%;margin-bottom: 2%;color: #2d3031; ">
     Or connect with
 
   </div>
   <div style="text-align: center; ">
-  <a class="btn bgRed p-1 m-1" style="width: 3%;" href="#" role="button"><img src="assets/Images/Facebook.png" width="40%" class="m-1"></a>
-  <a class="btn bgRed p-1 m-1" style="width: 3%;" href="#" role="button"><img src="assets/Images/google.png" width="75%"  class="m-1"></a>
+  <a class="btn p-1 m-1" style="width: 3%;background-color: #C9AB81" href="#" role="button"><img src="assets/Images/Facebook.png" width="40%" class="m-1"></a>
+  <a class="btn p-1 m-1" style="width: 3%;background-color: #C9AB81;" href="#" role="button"><img src="assets/Images/google.png" width="75%"  class="m-1"></a>
   </div>
-  <div style=" text-align: center;color: white;font-weight: bold;  margin-top: 2%;margin-bottom: 2%;">
-    <span >Don't have an account?    <a [routerLink]="['/register']" style="color: white; text-decoration: underline;">SIGN UP</a>
+  <div style=" text-align: center;color: #2d3031;font-weight: bold;  margin-top: 2%;margin-bottom: 2%;">
+    <span >Don't have an account?    <a [routerLink]="['/register']" style="color: #2d3031; text-decoration: underline;">SIGN UP</a>
     </span>
   </div>
