--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h4 style="color: white;">Our Tables</h4>
+    <h4 style="color: rgb(30, 28, 28);">Our Tables</h4>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
       <div *ngFor="let product of products; index as i" class="col mb-4">
         <div class="card" style="width: 16rem;">
