--- a/src/app/add-table/add-table.component.html
+++ b/src/app/add-table/add-table.component.html
@@ -1,6 +1,6 @@
 
 <div class="login-form-container">
-    <h5 style="font-weight: bold; text-align: center;">Add Table</h5>
+    <h5 style="font-weight: bold; text-align: center;font-size: 20px;">add table</h5>
     <!-- <button type="button" class="close" (click)="closeModal()">
       <span>&times;</span>
     </button> -->
@@ -20,7 +20,7 @@
   
         <button type="reset" class="btn btn-primary" (click)="closeModal()">Cancel</button>
   
-      <button type="submit" class="btn btn-primary">Add</button>
+      <button type="submit" class="btn btn-primary">add</button>
       </div>
   
     </form>
