--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
-
-<div style=" background-color: #0B1315;">
-
+<div class="page" style=" background-color: #0B1315;">
     <navbar></navbar>
-    <div >
-    <router-outlet></router-outlet>
-    
+    <div class="content">
+        <router-outlet></router-outlet>
     </div>
-    
     <app-footer></app-footer>
-
 </div>
