--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,59 +1,50 @@
-<h3 style="color: white;">Your order</h3>
+<h3 style="color: rgb(19, 19, 19); text-align: center;">Your order</h3>
 <div class="container mb-5">
     <div>
-        <div *ngFor="let item of orders" class="conatiner summary">
+        <div *ngFor="let item of orders" class="container summary">
             <div class="row row-cols-2">
                 <div class="col col-2">{{item.dish.name}}</div>
                 <div class="col col-1">{{item.numberOfDishes}} Dish</div>
-                <div class="col col-1">{{item.price}}€</div>
-                <div class="col col-1" (click)="deleteOder(item)"><mat-icon > delete</mat-icon></div>
+                <div class="col col-1">{{item.price}}</div>
+                <div class="col col-1" (click)="deleteOder(item)"><mat-icon> delete</mat-icon></div>
             </div>
             <hr>
         </div>
-        
     </div>
     <div class="hr"></div>
     <div class="container total">
         <div class="row row-cols-2">
-          
             <div>Total:</div>
-            <div>€{{total | number:'1.2-2'}}</div>
+            <div>{{total | number:'1.2-2'}}</div>
         </div>
     </div>
 </div>
 <div class="container myForm mb-5">
-    <h3>Order Forms</h3>
-    <p>Please fill up the info for the delivery:</p>
+    <h3 class="form-title">Order Form</h3>
+    <p class="form-description">Please fill up the info for the delivery:</p>
     <hr>
     <form [formGroup]="orderForm" (ngSubmit)="OnSubmit()">
-        <div>
-            Name
-            <br>
-            <input type="text" formControlName="name">
+        <div class="form-group">
+            <label for="name" class="form-label">Name</label>
+            <input id="name" type="text" class="form-control" formControlName="name">
             <div *ngIf="orderForm.controls['name'].invalid && (orderForm.controls['name'].dirty || orderForm.controls['name'].touched)">
                 <small class="text-danger">Name is required</small>
             </div>
         </div>
-        <br>
-        <div>
-            Phone Number
-            <br>
-            <input type="number" formControlName="phoneNumber">
+        <div class="form-group">
+            <label for="phoneNumber" class="form-label">Phone Number</label>
+            <input id="phoneNumber" type="number" class="form-control" formControlName="phoneNumber">
             <div *ngIf="orderForm.controls['phoneNumber'].invalid && (orderForm.controls['phoneNumber'].dirty || orderForm.controls['phoneNumber'].touched)">
                 <small class="text-danger">Phone number is required</small>
             </div>
         </div>
-        <br>
-        <div>
-            Address
-            <br>
-            <input type="text" formControlName="address">
+        <div class="form-group">
+            <label for="address" class="form-label">Address</label>
+            <input id="address" type="text" class="form-control" formControlName="address">
             <div *ngIf="orderForm.controls['address'].invalid && (orderForm.controls['address'].dirty || orderForm.controls['address'].touched)">
                 <small class="text-danger">Address is required</small>
             </div>
         </div>
-        <br>
-        <input type="submit" class="btn btn-primary mt-3" value="Submit" [disabled]="orderForm.invalid">
+        <input type="submit" class="btn btn-custom-submit mt-3" value="Submit" [disabled]="orderForm.invalid">
     </form>
 </div>
-
