--- a/src/app/dish/dish.component.html
+++ b/src/app/dish/dish.component.html
@@ -1,52 +1,52 @@
 <!-- data-table.component.html -->
 <div style="width: 70%; margin: 0 auto; margin-top: 5%; margin-bottom: 10%;">
-  <div style="display: flex;">
-    <button (click)="createDish()" style="font-weight: bold;">
+  <div class="button-container">
+    <button class="custom-button" (click)="createDish()" style="font-weight: bold;">
         
         Add Dish
-        <mat-icon >add</mat-icon>
+        <mat-icon class="custom-icon">add</mat-icon>
 
     </button>
   </div>
 
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: rgb(114, 112, 112);">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: #FEFEFE;">
         <!-- Define columns -->
         <ng-container matColumnDef="image" style="margin-top: 2%;">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">IMAGE</th>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">IMAGE</th>
             <td mat-cell *matCellDef="let element">
               <img [src]="getImageUrl(element?.dishPhoto)" alt="Dish Image" style="width: 50px; height: 50px;">
             </td>
           </ng-container>
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">NAME</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.name }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">NAME</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.name }}</td>
         </ng-container>
         <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Category</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.category?.name}}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">Category</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.category?.name}}</td>
         </ng-container>
         <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">DESCRIPTION</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.description }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">DESCRIPTION</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.description }}</td>
         </ng-container>
         <ng-container matColumnDef="isAvailable">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Available</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">
+            <th mat-header-cell *matHeaderCellDef style="color:#333">Available</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">
               <mat-slide-toggle  [checked]="element.isAvailable" (change)="toggleAvailability(element)">
               </mat-slide-toggle>
             </td>
           </ng-container>
         <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">PRICE</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.price }} $</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">PRICE</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.price }} td</td>
         </ng-container>
 
         <!-- Add column for actions -->
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">ACTIONS</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">
-                <span mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" style="background-color: rgb(114, 112, 112)">
-                    <mat-icon style="color: rgb(251, 202, 142)">more_vert</mat-icon>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">ACTIONS</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">
+                <span mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" style="background-color: #FEFEFE">
+                    <mat-icon style="color: #333">more_vert</mat-icon>
                 </span>
                 <mat-menu #menu="matMenu" >
                     <span mat-menu-item (click)="editElement(element)" >
