--- a/src/app/list-of-delivery-orders/list-of-delivery-orders.component.html
+++ b/src/app/list-of-delivery-orders/list-of-delivery-orders.component.html
@@ -3,27 +3,27 @@
     <div style="display: flex;">
       
       </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: rgb(114, 112, 112);">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: #FEFEFE;">
         <!-- Define columns -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">CLIENT NAME</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.name }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">CLIENT NAME</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.name }}</td>
         </ng-container>
         <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">CLIENT ADDRESS</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.address }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">CLIENT ADDRESS</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.address }}</td>
         </ng-container>
         <ng-container matColumnDef="phone">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">PHONE NUMBER</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.phoneNumber }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">PHONE NUMBER</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.phoneNumber }}</td>
         </ng-container>
         <ng-container matColumnDef="dishs">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">DISH</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)"><mat-icon (click)="showDish(element)">visibility</mat-icon></td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">DISH</th>
+            <td mat-cell *matCellDef="let element" style="color: #333"><mat-icon (click)="showDish(element)">visibility</mat-icon></td>
         </ng-container>
         <ng-container matColumnDef="total">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">TOTAL</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.total }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">TOTAL</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.total }}</td>
         </ng-container>
 
 
