--- a/src/app/menu-resturant/menu-resturant.component.html
+++ b/src/app/menu-resturant/menu-resturant.component.html
@@ -1,36 +1,36 @@
 <!-- data-table.component.html -->
 <div style="width: 70%; margin: 0 auto; margin-top: 5%; margin-bottom: 10%;">
-    <div style="display: flex;">
-        <button  style="font-weight: bold;" (click)="createtable()">
-            
+    <div class="button-container">
+        <button class="custom-button" (click)="createtable()">
             Add a Table
-            <mat-icon >add</mat-icon>
-    
+            <mat-icon class="custom-icon">add</mat-icon>
         </button>
-      </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: rgb(114, 112, 112);">
+    </div>
+    
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="color: rgb(225, 221, 221); background-color: #FEFEFE;">
         <!-- Define columns -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Capacity</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.capacity }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">Capacity</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.capacity }}</td>
         </ng-container>
         <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Table number</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">{{ element.tableNumber }}</td>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">Table number</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">{{ element.tableNumber }}</td>
         </ng-container>
         <ng-container matColumnDef="Available">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">Available</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">
-              <mat-slide-toggle  [checked]="element.isAvailable" >
+            <th mat-header-cell *matHeaderCellDef class="custom-header">Available</th>
+            <td mat-cell *matCellDef="let element" class="custom-cell">
+              <mat-slide-toggle [checked]="element.isAvailable" class="custom-slide-toggle">
               </mat-slide-toggle>
             </td>
           </ng-container>
+          
         <!-- Add column for actions -->
    <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef style="color:rgb(251, 202, 142)">ACTIONS</th>
-            <td mat-cell *matCellDef="let element" style="color: rgb(251, 202, 142)">
-                <span mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" style="background-color: rgb(114, 112, 112)">
-                    <mat-icon style="color: rgb(251, 202, 142)">more_vert</mat-icon>
+            <th mat-header-cell *matHeaderCellDef style="color:#333">ACTIONS</th>
+            <td mat-cell *matCellDef="let element" style="color: #333">
+                <span mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" style="background-color: #FEFEFE">
+                    <mat-icon style="color: #333">more_vert</mat-icon>
                 </span>
                 <mat-menu #menu="matMenu" style="background-color: rgb(114, 112, 112);">
                     <span mat-menu-item (click)="editElement(element)" >
