--- a/src/app/recommendation-modal/recommendation-modal.component.html
+++ b/src/app/recommendation-modal/recommendation-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h5 class="modal-title">Add Recommendation</h5>
+  <h5 class="modal-title"style="font-size:20px">Add Recommendation</h5>
   <button type="button" class="close" (click)="closeModal()">
     <span>&times;</span>
   </button>
