--- a/src/app/table-list/table-list.component.scss
+++ b/src/app/table-list/table-list.component.scss
@@ -2,14 +2,17 @@
 
 h4 {
         text-align: center;
-        margin-top: 3%;
+        margin-top: 5%;
         font-family: "lindsey-signature", sans-serif;
         font-weight: 500;
         font-style: normal;
         font-size: 500%;
+        margin-bottom: 30px;
+
     }
 
 .row {
+    margin-bottom: 70px;
     .card{
         margin: 5%;
         width: 70%;
@@ -22,11 +25,15 @@ h4 {
         object-fit: cover;
     }
 
+    
     .btn {
         margin: 0% 4.5%;
-        background-color:rgb(51, 6, 6) ;
+        background-color:#B69E5C ;
         border: 0px;
         color: white;
+        font-family: "eixample-dip", sans-serif;
+        margin-top: 20px;
+
     }
 
     
