--- a/src/app/add-table/add-table.component.html
+++ b/src/app/add-table/add-table.component.html
@@ -10,7 +10,7 @@
      
       <div class="form-group">
         <label for="position">  table Number </label>
-        <input type="text" id="tableNumber" class="form-control" [(ngModel)]="table.tableNumber" name="tableNumber" required >
+        <input type="number" id="tableNumber" class="form-control" [(ngModel)]="table.tableNumber" name="tableNumber" required >
       </div>
       <div class="form-group">
         <label for="capacity">capacity</label>
