--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 
         <div class="form-group">
           <input type="text" formControlName="username"placeholder="" required  >
-          <label>Username</label>
+          <label>Email</label>
         </div>
     
        
