--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 .custom-navbar-height {
     height: 80px;
-    border-bottom: 2px solid black; /* Black line at the bottom */
+    border-bottom: 2px solid rgb(251, 202, 142); /* Black line at the bottom */
     box-shadow: 0 4px 2px -2px gray; /* Shadow for the navbar */
 }
 
