--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bgBeige custom-navbar-height">
   <div class="container-fluid">
-    <a class="navbar-brand ms-3" href="#">
+    <a class="navbar-brand ms-3"  routerLink="/">
       <img src="assets/Images/Logo.png" style="height: 60px;" alt="Logo" class="d-inline-block align-text-top">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,6 +23,9 @@
         <li class="nav-item" *ngIf="isAuthenticated">
           <a class="nav-link fs-5 mt-1 ms-3 nav-custom" routerLink="/Delivery">Delivery Orders</a>
         </li>
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a class="nav-link fs-5 mt-1 ms-3 nav-custom" routerLink="/tablesReservations">Table reservations</a>
+        </li>
         <li class="nav-item" *ngIf="!isAuthenticated">
           <a class="nav-link fs-5 mt-1 ms-3 nav-custom" routerLink="/about">About</a>
         </li>
@@ -36,7 +39,7 @@
           <span class="username">{{ username | uppercase }}</span>
           <mat-icon>arrow_drop_down</mat-icon>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item routerLink="/profile">Profile</button>
+            <!-- <button mat-menu-item routerLink="/profile">Profile</button> -->
             <button mat-menu-item (click)="logout()">Log out</button>
           </mat-menu>
         </div>
