--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
         <div class="row">
           <div class="col-md-4">
             <h5>Contact Us</h5>
-            <p><i class="fas fa-envelope"></i> kool.food@gmail.com</p>
+            <p><i class="fas fa-envelope"></i> kool.tounsi@gmail.com</p>
             <p><i class="fas fa-phone"></i> +216 58 861 028</p>
             <p><i class="fas fa-map-marker-alt"></i> Petite Ariana </p>
           </div>
