update dish and table, error ms in login and sigup

--- a/src/app/add-table/add-table.component.html
+++ b/src/app/add-table/add-table.component.html
@@ -1,28 +1,36 @@
-
 <div class="login-form-container">
-    <h5 style="font-weight: bold; text-align: center;font-size: 20px;">add table</h5>
-    <!-- <button type="button" class="close" (click)="closeModal()">
-      <span>&times;</span>
-    </button> -->
-  </div>
-  <div class="login-form-container ">
-    <form (ngSubmit)="onSubmit()">
+  <h5 style="font-weight: bold; text-align: center;font-size: 20px;">Add Table</h5>
+</div>
+<div class="login-form-container">
+  <form [formGroup]="tableForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="tableNumber">Table Number</label>
+      <input type="number" id="tableNumber" class="form-control" formControlName="tableNumber">
      
-      <div class="form-group">
-        <label for="position">  table Number </label>
-        <input type="number" id="tableNumber" class="form-control" [(ngModel)]="table.tableNumber" name="tableNumber" required >
+      <div *ngIf="tableForm.get('tableNumber')?.hasError('required') ">
+        <div *ngIf="tableForm.get('tableNumber')?.errors?.['required']">Table number is required</div>
+        <div *ngIf="tableForm.get('tableNumber')?.errors?.['min']">Table number must be greater than 0.</div>
+        <div *ngIf="tableForm.get('tableNumber')?.errors?.['nonNegative']">Table number must not be negative.</div>
+
       </div>
-      <div class="form-group">
-        <label for="capacity">capacity</label>
-        <input type="number" id="capacity" class="form-control" [(ngModel)]="table.capacity" name="capacity" required >
+    </div>
+
+    <div class="form-group">
+      <label for="capacity">Capacity</label>
+      <input type="number" id="capacity" class="form-control" formControlName="capacity">
+      
+      <div *ngIf="tableForm.get('capacity')?.hasError('required') ">
+        <div *ngIf="tableForm.get('capacity')?.errors?.['required']">Capacity is required.</div>
+        <div *ngIf="tableForm.get('capacity')?.errors?.['min']">Capacity must be greater than 0.</div>
+        <div *ngIf="tableForm.get('capacity')?.errors?.['nonNegative']">Table number must not be negative.</div>
+
       </div>
-      <div style="display: flex;justify-content: space-between;">
-  
-        <button type="reset" class="btn btn-primary" (click)="closeModal()">Cancel</button>
-  
-      <button type="submit" class="btn btn-primary">add</button>
-      </div>
-  
-    </form>
-  </div>
-  
+     
+    </div>
+
+    <div style="display: flex;justify-content: space-between;">
+      <button type="reset" class="btn btn-primary" (click)="closeModal()">Cancel</button>
+      <button type="submit" class="btn btn-primary" [disabled]="tableForm.invalid">Add</button>
+    </div>
+  </form>
+</div>
