--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,44 +1,45 @@
 <div class="login-form-container" style="margin-top: 5%;">
-    <form [formGroup]="registerForm"  (ngSubmit)="onSubmit()">
-        <h3 style="color: #C9AB81; text-align: center; font-weight: bold;">SIGN IN</h3>
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <h3 style="color: #C9AB81; text-align: center; font-weight: bold;">SIGN IN</h3>
 
-        <div class="form-group">
-          <input type="text" formControlName="username"placeholder="" required  >
-          <label>Email</label>
-        </div>
-    
-       
-        
-     
-    <div>
-      <div class="password-input-container">
-          <div class="form-group">
-              <input type="{{ showPassword ? 'text' : 'password' }}" formControlName="password" placeholder=""  required>
-              <label>Password</label>
-            </div>
-        <span class="password-toggle-icon" (click)="togglePasswordVisibility()">
-          <i class="fa fa-eye" *ngIf="showPassword"></i>
-          <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
-        </span>
+    <div class="form-group">
+      <input type="text" formControlName="username" placeholder="" required>
+      <label>Email</label>
+      <div *ngIf="registerForm.get('username')?.invalid && (registerForm.get('username')?.touched || registerForm.get('username')?.dirty)" class="error-message">
+        <small *ngIf="registerForm.get('username')?.errors?.['required']">L'email est requis.</small>
+        <small *ngIf="registerForm.get('username')?.errors?.['email']">L'email n'est pas valide.</small>
       </div>
     </div>
-      
-   
-      <button type="submit" style="background-color: #C9AB81; 
 
-      ;">SIGN IN</button>
-    </form>
+    <div class="password-input-container">
+      <div class="form-group">
+        <input type="{{ showPassword ? 'text' : 'password' }}" formControlName="password" placeholder="" required>
+        <label>Password</label>
+        <div *ngIf="registerForm.get('password')?.invalid && (registerForm.get('password')?.touched || registerForm.get('password')?.dirty)" class="error-message">
+          <small *ngIf="registerForm.get('password')?.errors?.['required']">Le mot de passe est requis.</small>
+          <small *ngIf="registerForm.get('password')?.errors?.['minlength']">Le mot de passe doit contenir au moins 8 caractères.</small>
+        </div>
+      </div>
+      <span class="password-toggle-icon" (click)="togglePasswordVisibility()">
+        <i class="fa fa-eye" *ngIf="showPassword"></i>
+        <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
+      </span>
+    </div>
+
+    <button type="submit" style="background-color: #C9AB81;">SIGN IN</button>
+    
+  </form>
   
-  </div>
-  <div style="text-align: center;  margin-top: 2%;margin-bottom: 2%;color: #2d3031; ">
-    Or connect with
+</div>
+<div style="text-align: center;  margin-top: 2%;margin-bottom: 2%;color: #2d3031; ">
+  Or connect with
 
-  </div>
-  <div style="text-align: center; ">
-  <a class="btn p-1 m-1" style="width: 3%;background-color: #C9AB81" href="#" role="button"><img src="assets/Images/Facebook.png" width="40%" class="m-1"></a>
-  <a class="btn p-1 m-1" style="width: 3%;background-color: #C9AB81;" href="#" role="button"><img src="assets/Images/google.png" width="75%"  class="m-1"></a>
-  </div>
-  <div style=" text-align: center;color: #2d3031;font-weight: bold;  margin-top: 2%;margin-bottom: 2%;">
-    <span >Don't have an account?    <a [routerLink]="['/register']" style="color: #2d3031; text-decoration: underline;">SIGN UP</a>
-    </span>
-  </div>
+</div>
+<div style="text-align: center; ">
+<a class="btn p-1 m-1" style="width: 3%;background-color: #C9AB81" href="#" role="button"><img src="assets/Images/Facebook.png" width="40%" class="m-1"></a>
+<a class="btn p-1 m-1" style="width: 3%;background-color: #C9AB81;" href="#" role="button"><img src="assets/Images/google.png" width="75%"  class="m-1"></a>
+</div>
+<div style=" text-align: center;color: #2d3031;font-weight: bold;  margin-top: 2%;margin-bottom: 2%;">
+  <span >Don't have an account?    <a [routerLink]="['/register']" style="color: #2d3031; text-decoration: underline;">SIGN UP</a>
+  </span>
+</div>
