--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,53 +1,69 @@
 <div class="login-form-container" style="margin-top: 5%;">
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <h3 style="color: #C9AB81; text-align: center; font-weight: bold;">SIGN UP</h3>
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <h3 style="color: #C9AB81; text-align: center; font-weight: bold;">SIGN UP</h3>
 
-        <div class="form-group">
-            <input type="text" formControlName="firstname"placeholder="" required>
-            <label>First Name</label>
-          </div>
-          <div class="form-group">
-            <input type="text" formControlName="lastname" placeholder="" required>
-            <label>Last Name</label>
-          </div>
-         
-          <div class="form-group">
-            <input type="email" formControlName="email" placeholder="" required>
-            <label>Email</label>
-          </div>
-       
-      <div>
-        <div class="password-input-container">
-            <div class="form-group">
-                <input type="{{ showPassword ? 'text' : 'password' }}" formControlName="password" placeholder="" required>
-                <label>Password</label>
-              </div>
-          <span class="password-toggle-icon" (click)="togglePasswordVisibility()">
-            <i class="fa fa-eye" *ngIf="showPassword"></i>
-            <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
-          </span>
+    <div class="form-group">
+      <input type="text" formControlName="firstname" placeholder="" required>
+      <label>First Name</label>
+      <div *ngIf="submited &&  registerForm.get('firstname')?.invalid" class="error-message">
+        <small *ngIf="registerForm.get('firstname')?.errors?.['required']">First Name is required.</small>
+        <small *ngIf="registerForm.get('firstname')?.errors?.['minlength']">First Name must be at least 2 characters long.</small>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <input type="text" formControlName="lastname" placeholder="" required>
+      <label>Last Name</label>
+      <div *ngIf=" submited && registerForm.get('lastname')?.invalid" class="error-message">
+        <small *ngIf="registerForm.get('lastname')?.errors?.['required']">Last Name is required.</small>
+        <small *ngIf="registerForm.get('lastname')?.errors?.['minlength']">Last Name must be at least 2 characters long.</small>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <input type="email" formControlName="email" placeholder="" required>
+      <label>Email</label>
+      <div *ngIf="submited&& registerForm.get('email')?.invalid " class="error-message">
+        <small *ngIf="registerForm.get('email')?.errors?.['required']">Email is required.</small>
+        <small *ngIf="registerForm.get('email')?.errors?.['email']">Invalid email format.</small>
+      </div>
+    </div>
+
+    <div class="password-input-container">
+      <div class="form-group">
+        <input type="{{ showPassword ? 'text' : 'password' }}" formControlName="password" placeholder="" required>
+        <label>Password</label>
+        <div *ngIf="submited && registerForm.get('password')?.invalid " class="error-message">
+          <small *ngIf="registerForm.get('password')?.errors?.['required']">Password is required.</small>
+          <small *ngIf="registerForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</small>
         </div>
       </div>
-      <div>
-        <div class="password-input-container">
-            <div class="form-group">
-                <input type="{{ showConfirmPassword ? 'text' : 'password' }}" formControlName="password" placeholder="" required>
-                <label>Confirm Password</label>
-              </div>
-          <span class="password-toggle-icon" (click)="togglePasswordConfirmVisibility()">
-            <i class="fa fa-eye" *ngIf="showConfirmPassword"></i>
-            <i class="fa fa-eye-slash" *ngIf="!showConfirmPassword"></i>
-          </span>
+      <span class="password-toggle-icon" (click)="togglePasswordVisibility()">
+        <i class="fa fa-eye" *ngIf="showPassword"></i>
+        <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
+      </span>
+    </div>
+
+    <div class="password-input-container">
+      <div class="form-group">
+        <input type="{{ showConfirmPassword ? 'text' : 'password' }}" formControlName="confirmPassword" placeholder="" required>
+        <label>Confirm Password</label>
+        <div *ngIf="submited && registerForm.get('confirmPassword')?.invalid " class="error-message">
+          <small *ngIf="registerForm.get('confirmPassword')?.errors?.['required']">Confirm Password is required.</small>
+          <small *ngIf="registerForm.errors?.['passwordsMismatch']">Passwords do not match.</small>
         </div>
+        
       </div>
-   
-      <button type="submit" style="background-color: #C9AB81; margin-top: 2%
+      <span class="password-toggle-icon" (click)="togglePasswordConfirmVisibility()">
+        <i class="fa fa-eye" *ngIf="showConfirmPassword"></i>
+        <i class="fa fa-eye-slash" *ngIf="!showConfirmPassword"></i>
+      </span>
+    </div>
 
-      ;">SIGN UP</button>
-    </form>
-  
-  </div>
+    <button type="submit" style="background-color: #C9AB81; margin-top: 2%;">SIGN UP</button>
+  </form>
+</div>
 
-  <div style=" text-align: center;color: white;font-weight: bold;  margin-top: 2%;margin-bottom: 2%;">
-    <span>Have an account? <a [routerLink]="['/login']" style="color: white; text-decoration: underline;">SIGN IN</a></span>
-  </div>
+<div style="text-align: center; color: #2d3031; font-weight: bold; margin-top: 2%; margin-bottom: 2%;">
+  <span>Have an account? <a [routerLink]="['/login']" style="color: #2d3031; text-decoration: underline;">SIGN IN</a></span>
+</div>
